--- a/fortnite_image/test-display.css
+++ b/fortnite_image/test-display.css
@@ -32,4 +32,17 @@ img {
 }
 h1 {
   font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+span {
+  line-height: 13px;
+}
+.description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid white;
+  width: 100vh;
 }
